--- a/src/assets/css/2-design-tokens/_fonts.scss
+++ b/src/assets/css/2-design-tokens/_fonts.scss
@@ -46,12 +46,39 @@
          url('/assets/fonts/dm-sans/dm-sans-v11-latin-bold.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 
+  /* lausanne */
+
+@font-face {
+    font-family: 'Lausanne';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+         url('/assets/fonts/new/TWKLausanne-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  }
+
+@font-face {
+    font-family: 'Lausanne';
+    font-style: italic;
+    font-weight: 400;
+    src: local(''),
+         url('/assets/fonts/new/Lausanne-300italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  }
+
+@font-face {
+    font-family: 'Lausanne';
+    font-style: normal;
+    font-weight: bold;
+    src: local(''),
+         url('/assets/fonts/new/TWKLausanne-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  }
+
+
 body {
     font-family: sans-serif;
 }
 .fonts-loaded-1 body {
-    font-family: 'DM Sans Subset';
+    font-family: 'Lausanne';
 }
 .fonts-loaded-2 body {
-    font-family: 'DM Sans';
+    font-family: 'Lausanne';
 }
